# conservation-biology-toolkit

./: .env.deploy.template  .gitignore  ANALYTICS_FEATURES.md  CONTRIBUTING.md  Dockerfile.base  Dockerfile.lightsail  Dockerfile.service  LICENSE  PROJECT_PROGRESS.md  README.md  check-prerequisites.sh  deploy-aws.sh  docker-compose.production.yml  docker-compose.yml  install-prerequisites.sh  pyproject.toml  setup-aws-infrastructure.sh  setup-dev.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
deployment/: README.md
deployment/aws/: 01-setup-frontend-infrastructure.sh  02-create-ecr-repositories.sh  03-build-and-push-images-optimized.sh  03-build-and-push-images.sh  03-build-and-push-lightsail.sh  04-create-lightsail-container-service.sh  05-deploy-frontend.sh  05-deploy-images-to-lightsail.sh  06-rebuild-and-deploy-locally.sh  06-update-lightsail.sh  07-update-frontend.sh  README.md  deploy-all.sh  fix-spa-routing.sh  update-api.sh
deployment/ecs-setup/: 01-create-ecr-repositories.sh  02-build-and-push-images.sh  03-create-ecs-infrastructure.sh  06-deploy-ecs-services.sh  README.md  deploy-all.sh
deployment/lightsail-setup/: README.md  create-container-service.sh  deploy-lightsail-ecr.sh  deploy-to-lightsail.sh  docker-compose.lightsail-ecr.yml  rebuild-for-lightsail.sh  setup-lightsail-iam.sh  test-lightsail-ecr.sh
deployment/nginx/: api-only.conf  default.conf  development.conf  lightsail-simple.conf  lightsail.conf
deployment/scripts/: setup-aws-infrastructure.sh
docs/: ARCHITECTURE_DIAGRAM.md  AWS_SETUP_GUIDE.md  DEPLOYMENT_CAPACITY.md  DEPLOYMENT_SETUP.md  DEVELOPMENT.md  NEW_COMPUTER_SETUP.md  TROUBLESHOOTING.md
ecs-setup/: 02-build-and-push-images.sh  04-create-task-definitions.sh  05-create-target-groups.sh  07-setup-dns.sh  08-setup-auto-scaling.sh  deploy-all.sh
frontend/: .env.development  .env.docker  .env.production  README_TESTING.md  craco.config.js  package-lock.json  package.json  run_tests.js
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: HabitatLandscape.js.html  index.html
frontend/coverage/lcov-report/src/: App.js.html  index.html
frontend/coverage/lcov-report/src/components/: Navbar.js.html  index.html
frontend/coverage/lcov-report/src/config/: api.js.html  index.html
frontend/coverage/lcov-report/src/pages/: BreedRegistry.js.html  ClimateImpact.js.html  ConservationPlanning.js.html  GeneticTools.js.html  HabitatLandscape.js.html  Home.js.html  PopulationTools.js.html  SamplingTools.js.html  SpeciesAssessment.js.html  index.html
frontend/public/: index.html
frontend/src/: App.css  App.js  analytics.js  setupTests.js
frontend/src/__tests__/: App.test.js
frontend/src/__tests__/components/: Navbar.test.js
frontend/src/__tests__/config/: api.test.js  index.test.js
frontend/src/__tests__/pages/: BreedRegistry.test.js  ClimateImpact.test.js  ConservationPlanning.test.js  GeneticTools.test.js  HabitatLandscape.test.js  Home.test.js  PopulationTools.test.js  SamplingTools.test.js  SpeciesAssessment.test.js
frontend/src/components/: ErrorBoundary.js  Footer.js  Navbar.js  PrivacyNotice.js  index.js
frontend/src/config/: api.js
frontend/src/pages/: BreedRegistry.js  ClimateImpact.js  ConservationPlanning.js  GeneticTools.js  HabitatLandscape.js  Home.js  PopulationTools.js  SamplingTools.js  SpeciesAssessment.js
services/breed-registry/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
services/breed-registry/breed_registry/: settings.py  urls.py  wsgi.py
services/climate-impact/: Dockerfile  main.py  pyproject.toml  test_main.py
services/conservation-planning/: Dockerfile  main.py  pyproject.toml  test_main.py
services/genetic-diversity/: Dockerfile  README.md  README_TESTING.md  main.py  pyproject.toml  test_main.py
services/habitat-landscape/: Dockerfile  README.md  main.py  pyproject.toml  test_main.py
services/population-analysis/: Dockerfile  README_TESTING.md  main.py  pyproject.toml  run_tests.py  test_main.py
services/sampling-survey/: Dockerfile  README_TESTING.md  main.py  pyproject.toml  pytest.ini  run_tests.py  test_main.py
services/species-assessment/: Dockerfile  README.md  main.py  pyproject.toml  test_main.py
